# clap-doc

./: Cargo.toml  README.md
src/: lib.rs  test-snippet.rs
